# libsgfx

./: .gitignore  README.md  meson.build
include/: meson.build  sgfx.h
src/: meson.build  sgfx.c
test/: meson.build  sgfx_test.c
